[database homework][web_crawler] add new entity of offers
items:
(1)web and database
  nothing change

(2)web crawler
modify dealwith_restaurant_type.ipynb for creating below file:
modify type.csv
add offers,csv

--- a/web_crawler/dealwith_restaurant_type.ipynb
+++ b/web_crawler/dealwith_restaurant_type.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pandas_profiling"
+    "import pandas_profiling\n",
+    "import random"
    ]
   },
   {
@@ -237,9 +238,56 @@
    "source": [
     "for_type_data_NUM = restaurant_data_org['restaurant_series_num']\n",
     "for_type_data_TYPE = restaurant_data_org['type']\n",
-    "type_check = ['火鍋', '日本料理', '日式料理', '中式料理', '義式料理', '美式料理', '小吃' , '咖啡', '甜點', '下午茶',\n",
-    "         '飲料', '港式料理','港式飲茶' , '韓國料理', '韓式料理' , '泰國料理' ,'泰式料理', '酒館', '酒吧' ,'合菜', '燒烤', '約會餐廳',\n",
-    "        '冰品', '速食', '素食', '咖哩', '拉麵', '牛排' ,'宵夜','晚餐', '中餐', '午餐', '早點' ,'早餐','早午餐']"
+    "\n",
+    "type_check = ['火鍋','日本','日式','壽司','中華','中餐','中式','義大利','義式','美式',\n",
+    "              '小吃','咖啡','甜點','點心','下午茶','飲料','港式','韓國','韓式','泰國',\n",
+    "              '泰式','越南','越式','酒館/酒吧','合菜','燒烤','約會餐廳','冰品','速食',\n",
+    "              '素食','咖哩','拉麵','牛排','西餐','披薩','印度','南洋']\n",
+    "\n",
+    "type_list = ['日本料理','中式料理','義式料理','美式料理','港式料理','韓式料理',\n",
+    "             '印度料理','南洋料理','泰式料理','越式料理','約會餐廳','酒館/酒吧','下午茶',\n",
+    "             '火鍋','小吃','咖啡','甜點','點心','飲料','合菜','燒烤',\n",
+    "             '冰品','速食','素食','咖哩','拉麵','牛排','西餐','披薩']      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#make type.csv\n",
+    "#TYPE_NUM TYPE_NAME\n",
+    "type_row_all=[]\n",
+    "type_row={}\n",
+    "for i in range(len(type_list)):\n",
+    "    type_row = {}\n",
+    "    if i < 10:\n",
+    "        type_row['TYPE_NUM'] = 'TY_00' + str(i)\n",
+    "    else:\n",
+    "        type_row['TYPE_NUM'] = 'TY_0' + str(i)\n",
+    "        \n",
+    "    type_row['TYPE_NAME'] = type_list[i]\n",
+    "    type_row_all.append(type_row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_row_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TYPE = pd.DataFrame(type_row_all)\n",
+    "TYPE.to_csv(\"data_done/type.csv\", index=False)"
    ]
   },
   {
@@ -267,18 +315,42 @@
    "outputs": [],
    "source": [
     "def modify_type_format(val):\n",
-    "    if val == '日式料理':\n",
+    "    if val.find('日本') != -1:\n",
     "        val = '日本料理'\n",
-    "    elif val == '韓國料理':\n",
-    "        val = '日式料理'\n",
-    "    elif val == '泰國料理':\n",
-    "        val = '泰式料理'\n",
-    "    elif val == '酒吧':\n",
-    "        val = '酒館'\n",
-    "    elif val == '早點':\n",
-    "        val = '早餐'\n",
-    "    elif val == '中餐':\n",
-    "        val = '午餐'\n",
+    "    elif val.find('日式') != -1:\n",
+    "        val = '日本料理'\n",
+    "    elif val.find('壽司') != -1:\n",
+    "        val = '日本料理'    \n",
+    "    elif val.find('中華') != -1:\n",
+    "        val = '中式料理'\n",
+    "    elif val.find('中餐') != -1:\n",
+    "        val = '中式料理'\n",
+    "    elif val.find('中式') != -1:\n",
+    "        val = '中式料理'   \n",
+    "    elif val.find('義大利') != -1:\n",
+    "        val = '義式料理'   \n",
+    "    elif val.find('義式') != -1:\n",
+    "        val = '義式料理'  \n",
+    "    elif val.find('美式') != -1:\n",
+    "        val = '美式料理'\n",
+    "    elif val.find('港式') != -1:\n",
+    "        val = '港式料理'\n",
+    "    elif val.find('韓國') != -1:\n",
+    "        val = '韓式料理'   \n",
+    "    elif val.find('韓式') != -1:\n",
+    "        val = '韓式料理' \n",
+    "    elif val.find('泰國') != -1:\n",
+    "        val = '泰式料理'   \n",
+    "    elif val.find('泰式') != -1:\n",
+    "        val = '泰式料理 '\n",
+    "    elif val.find('越南') != -1:\n",
+    "        val = '越式料理'   \n",
+    "    elif val.find('越式') != -1:\n",
+    "        val = '越式料理' \n",
+    "    elif val.find('印度') != -1:\n",
+    "        val = '印度料理'   \n",
+    "    elif val.find('南洋') != -1:\n",
+    "        val = '南洋料理'    \n",
     "    return val"
    ]
   },
@@ -288,7 +360,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for_type_data_NUM"
+    "def check_type_belong(type_in):\n",
+    "    #print(type_in)\n",
+    "    val = ''\n",
+    "    type_num = 0\n",
+    "    for i in range(len(type_list)):\n",
+    "        if type_in==type_list[i]:\n",
+    "            type_num = i\n",
+    "            break\n",
+    "            \n",
+    "    if type_num < 10:\n",
+    "        val = 'TY_00' + str(type_num)\n",
+    "    else:\n",
+    "        val = 'TY_0' + str(type_num)\n",
+    "    #print(val)    \n",
+    "    return val"
    ]
   },
   {
@@ -297,19 +383,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def deal_with_type_num(num):\n",
-    "    type_number = 'TYPE_'\n",
-    "    length = len(str(num))\n",
-    "    if length == 1:\n",
-    "        type_number = type_number + '000' + str(num)\n",
-    "    elif length == 2:\n",
-    "        type_number = type_number + '00' + str(num)\n",
-    "    elif length == 3:\n",
-    "        type_number = type_number + '0' + str(num) \n",
-    "    elif length == 4:\n",
-    "        type_number = type_number + str(num)  \n",
-    "    #print(type_number)\n",
-    "    return type_number"
+    "def get_rst_num_quantity_in_comment():\n",
+    "    restaurant_data = pd.read_csv(\"data_done/comment_line.csv\")\n",
+    "    rst_num = restaurant_data['RST_NUM']\n",
+    "    rst_num_qun = {}\n",
+    "    rst_num_qun_all = []\n",
+    "    before_num = ''\n",
+    "    now_num = ''\n",
+    "    num_counter = 1\n",
+    "    #print(len(rst_num))\n",
+    "    change_item = 0\n",
+    "    for i in range(len(rst_num)):\n",
+    "        now_num = rst_num[i]\n",
+    "        #print(now_num)\n",
+    "        if now_num == before_num:\n",
+    "            num_counter +=1\n",
+    "        else:\n",
+    "            if before_num != '':\n",
+    "                change_item = 1\n",
+    "        \n",
+    "        if change_item == 1:\n",
+    "            rst_num_qun[before_num] = num_counter\n",
+    "            rst_num_qun_all.append(rst_num_qun)\n",
+    "            num_counter = 1\n",
+    "            rst_num_qun = {}\n",
+    "            change_item = 0\n",
+    "       \n",
+    "        before_num = now_num\n",
+    "    #last\n",
+    "    rst_num_qun[before_num] = num_counter\n",
+    "    rst_num_qun_all.append(rst_num_qun)\n",
+    "    return rst_num_qun_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(get_rst_num_quantity())\n",
+    "tt = get_rst_num_quantity_in_comment()\n",
+    "print(len(tt))\n",
+    "#print(tt[0].get('RSN_000000'))\n",
+    "#tt"
    ]
   },
   {
@@ -323,29 +440,44 @@
     "type_counter = 0\n",
     "get_type_temp = {}\n",
     "type_index = 0\n",
-    "for i in for_type_data_NUM:\n",
+    "rst_num_qun_in_offer = {}\n",
+    "rst_num_qun_in_offer_all = []\n",
+    "rst_num_qun_in_offer_counter = 0\n",
+    "for i in range(len(for_type_data_NUM)):\n",
     "    type_counter = 0\n",
     "    type_val = for_type_data_TYPE[type_index] \n",
-    "    #print(type_val)\n",
+    "    #print(for_type_data_NUM[i] + ' :' + type_val)\n",
+    "   \n",
     "    for j in range(len(type_check)):\n",
+    "        \n",
     "        if type_val.find(type_check[j]) != -1:\n",
     "            get_type_temp = {}\n",
     "            \n",
-    "            get_type_temp['TYPE_NUM'] = deal_with_type_num(type_index) \n",
-    "            \n",
-    "            get_type_temp['RST_NUM'] = i \n",
+    "            get_type_temp['RST_NUM'] = for_type_data_NUM[i]\n",
     "            temp_val = modify_type_format(type_check[j])\n",
-    "            get_type_temp['TYPE_NAME'] = temp_val\n",
+    "            #print(type_check[j] + '->'+ temp_val)\n",
+    "            get_type_temp['TYPE_NUM'] = check_type_belong(temp_val)\n",
     "            #print(get_type_temp)\n",
     "            get_type_all.append(get_type_temp)\n",
     "            type_counter = type_counter + 1\n",
+    "            rst_num_qun_in_offer_counter = type_counter\n",
     "            if type_counter == 3:\n",
     "                break\n",
+    "                \n",
     "    if type_counter == 0:\n",
-    "        get_type_temp['RST_NUM'] = i \n",
-    "        get_type_temp['TYPE_NAME'] = '小吃'\n",
-    "        get_type_all.append(get_type_temp)\n",
+    "        #set'小吃'\n",
+    "        get_type_temp = {}\n",
+    "        get_type_temp['RST_NUM'] = for_type_data_NUM[i] \n",
+    "        get_type_temp['TYPE_NUM'] = 'TY_013' \n",
+    "        #print('小吃')\n",
+    "        rst_num_qun_in_offer_counter = 1\n",
+    "        get_type_all.append(get_type_temp)       \n",
+    "    \n",
+    "    rst_num_qun_in_offer[for_type_data_NUM[i]] = rst_num_qun_in_offer_counter \n",
+    "    rst_num_qun_in_offer_all.append(rst_num_qun_in_offer)\n",
+    "    rst_num_qun_in_offer = {}\n",
     "    type_index = type_index + 1\n",
+    "    #print(\"=======\")\n",
     "#print(get_type_all)        "
    ]
   },
@@ -356,7 +488,7 @@
    "outputs": [],
    "source": [
     "TYPE = pd.DataFrame(get_type_all)\n",
-    "TYPE.to_csv(\"data_done/type.csv\", index=False)"
+    "TYPE.to_csv(\"data_done/offers_temp.csv\", index=False)"
    ]
   },
   {
@@ -364,7 +496,150 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#rst_num_qun_in_offer_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#find restaurant without comment and save them\n",
+    "all_rst_items = pd.read_csv(\"data_done/restaurant.csv\")\n",
+    "all_comment_rst_items = pd.read_csv(\"data_done/comment_line.csv\")\n",
+    "#print(len(all_rst_items))\n",
+    "#print(len(all_comment_rst_items))\n",
+    "save_rst_no_comment = []\n",
+    "save_rst_no_comment_val = []\n",
+    "rst_row = all_rst_items['RST_NUM']\n",
+    "rst_cmt_row = all_comment_rst_items['RST_NUM']\n",
+    "is_find = 0\n",
+    "temp = {}\n",
+    "# print(rst_row[0])\n",
+    "# print(rst_cmt_row[0])\n",
+    "for i in range(len(rst_row)):\n",
+    "    temp = {}\n",
+    "    is_find = 0\n",
+    "    j = i\n",
+    "    for j in range(len(rst_cmt_row)):\n",
+    "        if rst_row[i] == rst_cmt_row[j]:\n",
+    "            #print(rst_row[i])\n",
+    "            is_find = 1\n",
+    "            break\n",
+    "    if is_find == 0:\n",
+    "        temp[rst_row[i]] = 0\n",
+    "        save_rst_no_comment.append(temp)\n",
+    "        save_rst_no_comment_val.append(i)\n",
+    "        #print('no_comment:' + rst_row[i])   \n",
+    "save_rst_no_comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save_rst_no_comment_val for combind sequence of get_rst_comment_qun and save_rst_no_comment\n",
+    "print(save_rst_no_comment_val)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#combind  get_rst_comment_qun and save_rst_no_comment\n",
+    "get_rst_comment_qun = get_rst_num_quantity_in_comment() \n",
+    "print(len(get_rst_comment_qun))\n",
+    "for i in range(len(save_rst_no_comment)):\n",
+    "    get_rst_comment_qun.insert(save_rst_no_comment_val[i], save_rst_no_comment[i])\n",
+    "print(len(get_rst_comment_qun))\n",
+    "#get_rst_comment_qun    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#save FOS_TYPE_VAL column\n",
+    "ofs_type_val = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_random_val(intput_all, input_div):\n",
+    "#ex: 15 隨機分成3個數字 總和要15\n",
+    "    x = intput_all\n",
+    "    y_sum = 0\n",
+    "    temp = 0\n",
+    "    for i in range(input_div):\n",
+    "        if i < (input_div-1):\n",
+    "            temp = random.randint(0,(x-y_sum))\n",
+    "        else:\n",
+    "            temp = x-y_sum\n",
+    "\n",
+    "        ofs_type_val.append(temp)\n",
+    "        y_sum = y_sum + temp\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_rst_items = pd.read_csv(\"data_done/restaurant.csv\")\n",
+    "rst_row = all_rst_items['RST_NUM']\n",
+    "# offers_type_val = []\n",
+    "#print(len(rst_row))\n",
+    "for i in range(len(rst_row)):\n",
+    "    num = get_rst_comment_qun[i].get(rst_row[i])\n",
+    "#     print(str(i) + \"-----------------\")\n",
+    "#     print(rst_row[i])\n",
+    "#     print(num)\n",
+    "#     print(rst_num_qun_in_offer_all[i].get(rst_row[i]))\n",
+    "    get_random_val(num, rst_num_qun_in_offer_all[i].get(rst_row[i]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ofs_type_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "offers = pd.read_csv(\"data_done/offers_temp.csv\")\n",
+    "offers.insert(2, 'OFS_TYPE_VAL',  ofs_type_val)\n",
+    "offers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TYPE = pd.DataFrame(offers)\n",
+    "TYPE.to_csv(\"data_done/offers.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
