[database homework][web_crawler] fix COM_LINE column values were wrong which were inside of comment_line.csv
items:
(1)web and database
nothing change

(2)web crawler
like this commit title

--- a/web_crawler/dealwith_commt_line.ipynb
+++ b/web_crawler/dealwith_commt_line.ipynb
@@ -278,20 +278,24 @@
     "line_counter = 1\n",
     "rst_before = ''\n",
     "rst_now = ''\n",
-    "cmt_before = ''\n",
-    "cmt_now = ''\n",
-    "\n",
     "for i in range(len(check_comtr_num)):\n",
     "    rst_now = check_comtr_rst[i]\n",
-    "    cmt_now = check_comtr_num[i]\n",
-    "    if rst_now == rst_before and cmt_now == cmt_before:\n",
+    "    if rst_now == rst_before:\n",
     "        line_counter = line_counter + 1\n",
     "    else:\n",
     "        line_counter = 1\n",
     "    rst_before = rst_now\n",
-    "    cmt_before = cmt_now\n",
     "    \n",
     "    add_line.append(line_counter)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#add_line"
    ]
   },
   {
